--- a/my-portfolio/src/Components/Column/column.css
+++ b/my-portfolio/src/Components/Column/column.css
@@ -4,7 +4,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    vertical-align: top;
+    /* vertical-align: top; */
 }
 
 @media (min-width: 900px) {
@@ -12,4 +12,14 @@
         display: inline-flex;
         width: 50%;
     }
+}
+
+.tagsContainer{
+    display: flex;
+    flex-wrap: wrap;  /* Add this property to enable wrapping */
+   justify-content: center;
+    margin-top: 1vh;
+    position: relative;
+    margin-bottom: 0vh;
+    align-items:flex-end;
 }
