--- a/my-portfolio/src/Components/LeftAlignContainer/LeftContainer.css
+++ b/my-portfolio/src/Components/LeftAlignContainer/LeftContainer.css
@@ -2,6 +2,6 @@
     max-width: 100%;
     display: flex;
     justify-content: left;
-    padding-top: 20px;
-    padding-left: 10px;
+    /* padding-top: 20px;
+    padding-left: 10px; */
 }
