--- a/my-portfolio/src/Components/ServicePage/services.css
+++ b/my-portfolio/src/Components/ServicePage/services.css
@@ -1,5 +1,5 @@
 .serviceHeadDiv{
-    width: 75%;
+    width: 77%;
   border-bottom: solid white 2px; 
    padding: 0 !important;
 
